Fixed the navbar overflow and arrangements

--- a/index.css
+++ b/index.css
@@ -5,15 +5,13 @@
 body {
     width: 100vw;
     min-height: 100vh;
+    overflow-x: hidden;
 }
 main {
     width: 100%;
 }
 
 /* header */
-.header {
-    padding: 10px;
-}
 .logo {
     height: 20px;
 }
@@ -22,14 +20,18 @@ main {
     align-items: center;
 }
 .youtube-logo h2 {
-    padding-left: 10px;
+    padding-left: 3px;
 }
 .profile {
     height: 40px;
 }
 .header {
+    max-width: 100vw;
+    padding: 20px 30px 20px 20px;
+    background-color: aqua;
     display: flex;
     align-items: center;
+    padding-block: 10px;
 }
 .youtube-logo {
     margin-left: 10px;
@@ -64,8 +66,9 @@ main {
     border-radius: 50%;
 }
 .search-glass {
+    padding-block: 10px;
     padding-left: 10px;
-    padding-right: 15px;
+    padding-right: 10px;
 }
 
 /* end of header */
@@ -80,15 +83,67 @@ main {
 .video iframe {
     width: 100%;
 }
+/* sidebar */
+.sidebar {
+    padding: 20px;
+    margin: auto;
+    width: fit-content;
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+    max-width: 500px;
+}
+/* video tile */
+.tile {
+    display: flex;
+    column-gap: 10px;
+    align-items: center;
+}
+.description {
+    display: flex;
+    flex-direction: column;
+    column-gap: 5px;
+}
+.title {
+    font-size: 1rem;
+}
+.author{
+    text-transform: uppercase;
+    font-size: 0.7rem;
+}
+.cover-thumnail {
+    height: 100px;
+    border-radius: 10px;
+}
 
 /* at smaller screens */
 @media  (max-width: 800px) {
     iframe {
         height: 300px;
     }
+    .search-bar .search-text {
+        width: 10rem;
+    }
 }
 @media (max-width: 500px) {
     iframe {
         height: 250px;
     }
+    .search-bar .search-text {
+        display: none;
+    }
+}
+@media (min-width: 800px) {
+    main {
+        display: flex;
+        flex-direction:row;
+        margin: auto;
+    }
+    iframe, .video {
+        flex: 1;
+    }
+    /* .sidebar, .video {
+        margin: 0;
+        margin-top: 20px;
+    } */
 }
